--- a/matete-web/config/packages/security.yaml
+++ b/matete-web/config/packages/security.yaml
@@ -12,7 +12,7 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            lazy: true
+            lazy : true
             provider: users_in_memory
 
             # activate different ways to authenticate
@@ -20,9 +20,11 @@ security:
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
+            custom_authenticators:
+                - App\Security\LoginFormAuthenticator
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/carte, roles: ROLE_USER }
