--- a/matete-web/config/packages/security.yaml
+++ b/matete-web/config/packages/security.yaml
@@ -1,4 +1,6 @@
 security:
+    encoders:
+        App\Entity\Producteur: auto    
     # https://symfony.com/doc/current/security/authenticator_manager.html
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#c-hashing-passwords
@@ -6,14 +8,20 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        app_user_provider:
+            entity:
+                class: 'App\Entity\Producteur'
+                property: mail
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy : true
-            provider: users_in_memory
+            provider: app_user_provider
+
+            logout:
+                path: logout_security
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
