--- a/matete-web/.env
+++ b/matete-web/.env
@@ -30,4 +30,4 @@ APP_SECRET=9617c40272f0444532d4e5286d926b16
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://btssio:Lurcat2020@127.0.0.1:3306/matete?serverVersion=5.7"
+DATABASE_URL="mysql://root:Lurcat2020@127.0.0.1:3306/matete?serverVersion=5.7"
