--- a/matete-web/config/packages/security.yaml
+++ b/matete-web/config/packages/security.yaml
@@ -12,6 +12,9 @@ security:
             entity:
                 class: 'App\Entity\Producteur'
                 property: mail
+
+    
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -22,6 +25,8 @@ security:
 
             logout:
                 path: logout_security
+                target: main_page
+                
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
