--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,3 +17,9 @@ deploy_staging:
     - ssh btssio@lycee-gen-technologique.pro.dns-orange.fr "cd /var/www/html/tommy/matete/matete/matete-web && docker-compose down && git checkout DeploiementTommy && git pull origin DeploiementTommy && docker-compose build --no-cache --pull && docker-compose up -d && exit"
   only:
     - DeploiementTommy
+
+Tests:
+  stage: Tests
+  script:
+    - php bin/phpunit
+  allow_failure: false
