--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,9 @@ before_script:
 Tests:
   image: php:8.0-apache
   stage: test
+  
   script:
-    - php bin/phpunit matete-web/
+    - phpunit matete-web/
   allow_failure: false
 
 deploy_staging:
