--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,14 +10,14 @@ before_script:
   #installation phpunit
   - wget https://phar.phpunit.de/phpunit-9.3.7.phar
   - chmod +x phpunit-9.3.7.phar
-  - sudo mv phpunit-9.3.7.phar /usr/local/bin/phpunit
+  - mv phpunit-9.3.7.phar /usr/local/bin/phpunit
 
 Tests:
   image: php:8.0-apache
   stage: test
 
   script:
-    - vendor/bin/phpunit matete-web/
+    - php bin/phpunit matete-web/
   allow_failure: false
 
 deploy_staging:
