--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ before_script:
 
 Tests:
   image: php:8.0-apache
-  stage: Tests
+  stage: test
   services:
     - name: mysql:5.7
       alias: mysql
