--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ Tests:
     - composer install
     - npm install
   script:
-    - php bin/phpunit
+    - php vendor/bin/phpunit
   allow_failure: true
 
 deploy_staging:
