--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,21 @@ before_script:
 Tests:
   image: php:8.0-apache
   stage: test
-
+  services:
+    - name: mysql:5.7
+      alias: mysql
+  variables:
+    MYSQL_ROOT_PASSWORD: pass_test
+    MYSQL_DATABASE: matetetest
+    MYSQL_USER: matetetest
+    MYSQL_PASSWORD: matetetest
+    DATABASE_URL: 'mysql://matetetest:matetetest@mysql:3306/matetetest'
+  before_script:
+    - apt-get update && apt-get install -y git libzip-dev npm nodejs
+    - curl -sSk https://getcomposer.org/installer | php -- --disable-tls && mv composer.phar /usr/local/bin/composer
+    - docker-php-ext-install mysqli pdo pdo_mysql zip
+    - composer install
+    - npm install
   script:
     
     - /usr/local/bin/phpunit matete-web/
