--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 before_script:
+  - cd matete-web 
   - apt-get update -qq
   - apt-get install -qq git wget
   # Setup SSH deploy keys
@@ -22,18 +23,15 @@ Tests:
     MYSQL_PASSWORD: matetetest
     DATABASE_URL: 'mysql://matetetest:matetetest@mysql:3306/matetetest'
   before_script:
+    - cd matete-web 
     - apt-get update && apt-get install -y git libzip-dev npm nodejs wget
     - curl -sSk https://getcomposer.org/installer | php -- --disable-tls && mv composer.phar /usr/local/bin/composer
     - docker-php-ext-install mysqli pdo pdo_mysql zip
-    #installation phpunit
-    - wget https://phar.phpunit.de/phpunit-9.3.7.phar
-    - chmod +x phpunit-9.3.7.phar
-    - mv phpunit-9.3.7.phar /usr/local/bin/phpunit
     - composer install
     - npm install
   script:
     
-    - /usr/local/bin/phpunit matete-web/
+    - php bin/phpunit
   allow_failure: false
 
 deploy_staging:
