--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,9 +24,13 @@ Tests:
     DATABASE_URL: 'mysql://matetetest:matetetest@mysql:3306/matetetest'
   before_script:
     - cd matete-web 
-    - apt-get update && apt-get install -y git libzip-dev npm nodejs wget
+    - apt-get update && apt-get install -y git libzip-dev npm nodejs
     - curl -sSk https://getcomposer.org/installer | php -- --disable-tls && mv composer.phar /usr/local/bin/composer
     - docker-php-ext-install mysqli pdo pdo_mysql zip
+    - php bin/console doctrine:database:drop --force
+    - php bin/console doctrine:database:create
+    - php bin/console doctrine:migration:migrate --no-interaction
+    - php bin/console doctrine:fixtures:load --no-interaction
     - composer install
     - npm install
   script:
