--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ Tests:
     - apt-get update && apt-get install -y git libzip-dev npm nodejs wget
     - curl -sSk https://getcomposer.org/installer | php -- --disable-tls && mv composer.phar /usr/local/bin/composer
     - docker-php-ext-install mysqli pdo pdo_mysql zip
+    - composer require symfony/runtime
     - php bin/console doctrine:database:drop --force
     - php bin/console doctrine:database:create
     - php bin/console doctrine:migration:migrate --no-interaction
