--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,9 +25,13 @@ Tests:
     - cd matete-web 
     - apt-get update && apt-get install -y git libzip-dev npm nodejs wget
     - curl -sSk https://getcomposer.org/installer | php -- --disable-tls && mv composer.phar /usr/local/bin/composer
-    - docker-php-ext-install mysqli pdo pdo_mysql zip
+    - docker-php-ext-install mysqli pdo pdo_mysql zip 
     - composer install
     - npm install
+    - php bin/console doctrine:database:drop --force--env=test
+    - php bin/console doctrine:database:create--env=test
+    - php bin/console doctrine:migration:migrate --no-interaction--env=test
+    - php bin/console doctrine:fixtures:load --no-interaction--env=test
 
   script:
     
