--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,10 +28,10 @@ Tests:
     - docker-php-ext-install mysqli pdo pdo_mysql zip 
     - composer install
     - npm install
-    - php bin/console doctrine:database:drop --force
-    - php bin/console doctrine:database:create
-    - php bin/console doctrine:migration:migrate --no-interaction
-    - php bin/console doctrine:fixtures:load --no-interaction
+    - php bin/console doctrine:database:drop --force --env=test
+    - php bin/console doctrine:database:create --env=test
+    - php bin/console doctrine:migration:migrate --no-interaction --env=test
+    - php bin/console doctrine:fixtures:load --no-interaction --env=test
 
   script:
     
