--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ Tests:
       alias: mysql
   variables:
     MYSQL_ROOT_PASSWORD: pass_test
-    MYSQL_DATABASE: matetetest
+    MYSQL_DATABASE: matetetest_test
     MYSQL_USER: matetetest
     MYSQL_PASSWORD: matetetest
     DATABASE_URL: 'mysql://matetetest:matetetest@mysql:3306/matetetest'
