--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,15 @@
+ 
+#ajout du SAST
+image: jakzal/phpqa:latest
+cache:
+ paths:
+ - vendor/
+stages:
+ - SecurityChecker
+ - CodingStandards
+ - deploy_staging
+
+
 before_script:
   - apt-get update -qq
   - apt-get install -qq git wget
@@ -8,7 +20,34 @@ before_script:
   - mkdir -p ~/.ssh
   - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
   
-
+security-checker:
+ stage: SecurityChecker
+ script:
+ - local-php-security-checker --path=./composer.lock
+ allow_failure: false
+phpcs:
+ stage: CodingStandards
+ script:
+ - phpcs -v --standard=PSR12 --ignore=./src/Kernel.php ./src
+ allow_failure: false
+phpstan:
+ stage: CodingStandards
+ script:
+ - phpstan analyse ./src
+ allow_failure: false
+twig-lint:
+ stage: CodingStandards
+ script:
+ - twig-lint lint ./templates
+ allow_failure: false
+ 
+deploy_staging:
+ type: deploy
+ stage: deploy_staging
+ environment:
+ name: deploy_staging
+ url: lycee-gen-technologique.pro.dns-orange.fr
+ 
 Tests:
   image: php:8.0-apache
   stage: test
