--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ cache:
     - vendor/
 stages:
   - SecurityChecker
+  - CodingStandards
   - test
   - deploy
 
@@ -22,6 +23,24 @@ SecurityChecker:
   stage: SecurityChecker
   script:
     - local-php-security-checker --path=./composer.lock
+  allow_failure: false
+
+phpcs:
+ stage: CodingStandards
+ script:
+ - phpcs -v --standard=PSR12 --ignore=./src/Kernel.php ./src
+ allow_failure: false
+
+phpstan:
+  stage: CodingStandards
+  script:
+    - phpstan analyse ./src
+  allow_failure: false
+
+twig-lint:
+  stage: CodingStandards
+  script:
+    - twig-lint lint ./templates
   allow_failure: false
 
 test:
